# sigil

./: .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.bytehound  MODULE.bazel  README.md  SECURITY.md  TESTING.md  deny.toml  flake.nix  lcov.info  rivet.yaml  rust-toolchain.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: compliance.yml  formal-verification.yml  fuzz.yml  memory-profile.yml  publish-to-crates-io.yml  release.yml  rust.yml  supply-chain.yml  tpm-tests.yml  wasm-signing.yml
artifacts/cybersecurity/: assets-and-threats.yaml  goals-and-requirements.yaml
artifacts/dev/: features.yaml
artifacts/stpa/: attack-scenarios.yaml  control-structure.yaml  data-flows.yaml  losses-and-hazards.yaml  ucas.yaml
docs/: BUILD.bazel  INCIDENT_RESPONSE.md  KEY_LIFECYCLE.md  TARA_COMPLIANCE.md  THREAT_MODEL.md  allocation_free_findings.md  automotive-regulatory-compliance.md  bazel-build-guide.md  ci_memory_analysis.md  composition-threat-model.md  fresh_rekor_test_results.md  keyless.md  memory_profiling.md  multi-signature-composition.md  provenance-supply-chain-research.md  rekor_inclusion_proof_investigation.md  rekor_leaf_hash_fix.md
docs/security/: ASSET_INVENTORY.md  BUILD.bazel  INTEGRATION_GUIDANCE.md  RISK_ASSESSMENT.md  attestation-trust-formalization.md
docs/superpowers/plans/: 2026-03-27-component-model-stpa-pqc.md
docs/superpowers/specs/: 2026-03-16-stpa-sec-implementation-plan.md
examples/: composition-signing.rs
examples/wasmtime-loader/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dsse_envelope.rs  fuzz_elf_parsing.rs  fuzz_format_detection.rs  fuzz_mcuboot_parsing.rs
lean/: BUILD.bazel  Ed25519.lean  lakefile.lean
schemas/: stpa-sec.yaml
scripts/: publish.rs  run-ci-tests.sh
scripts/mythos/: discover.md  emit.md  rank.md  validate.md
scripts/vmodel/: HOWTO.md  discover.md  emit.md  rank.md  validate.md
src/attestation/: BUILD.bazel  Cargo.toml
src/attestation/src/: dsse.rs  lib.rs  reproducibility.rs
src/cli/: BUILD.bazel  Cargo.toml  docs.rs  main.rs
src/component/: Cargo.toml
src/component/src/: lib.rs
src/crypto/: BUILD.bazel  Cargo.toml
src/crypto/examples/: BUILD.bazel  native_demo.rs
src/crypto/src/: lib.rs
src/lib/: BUILD.bazel  Cargo.toml  build.rs
src/lib/src/: BUILD.bazel  allocator.rs  build_env.rs  dsse.rs  error.rs  intoto.rs  lib.rs  pqc.rs  sct.rs  secure_file.rs  slsa.rs  split.rs  time.rs  transcoding.rs
src/lib/src/airgapped/: bundle.rs  config.rs  mod.rs  state.rs  storage.rs  tuf.rs  verifier.rs
src/lib/src/audit/: mod.rs
src/lib/src/composition/: mod.rs
src/lib/src/container/: bundle.rs  cosign.rs  digest.rs  mod.rs  referrer.rs
src/lib/src/format/: elf.rs  mcuboot.rs  mod.rs
src/lib/src/http/: mod.rs
src/lib/src/metrics/: mod.rs
src/lib/src/platform/: keyring_storage.rs  mod.rs  sgx.rs  software.rs  tpm2.rs  trustzone.rs
src/lib/src/platform/secure_element/: atecc608.rs  mod.rs  se050.rs
src/lib/src/policy/: eval.rs  mod.rs  rego.rs  slsa.rs
src/lib/src/provisioning/: ca.rs  csr.rs  device.rs  mod.rs  session.rs  verification.rs  wasm_signing.rs
src/lib/src/runtime/: crypto_host.rs  mod.rs
src/lib/src/signature/: info.rs  keys.rs  mod.rs  multi.rs  sig_sections.rs  simple.rs
src/lib/src/signature/keyless/: cert_pinning.rs  cert_verifier.rs  checkpoint.rs  format.rs  fulcio.rs  merkle.rs  mod.rs  oidc.rs  proof_cache.rs  rate_limit.rs  rekor.rs  rekor_verifier.rs  signer.rs  transport.rs
src/lib/src/verus_proofs/: BUILD.bazel  dsse_proofs.rs  merkle_proofs.rs  mod.rs
src/lib/src/wasm_module/: component.rs  mod.rs  varint.rs
src/lib/tests/: airgapped_e2e.rs  allocation_free.rs  keyless_integration.rs  real_world_allocation_free.rs
supply-chain/: config.toml
verification/rocq/: BUILD.bazel  README.md  pae.rs
wit/: BUILD.bazel
