[package]
name = "wsc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly Signature Component - WASM signing and verification toolkit"
readme = "../../README.md"
keywords = ["webassembly", "modules", "signatures"]
homepage = "https://github.com/pulseengine/wsc"
categories = ["cryptography", "wasm"]

[dependencies]
# Re-export attestation types from minimal crate
wsc-attestation = { version = "0.5.0", path = "../attestation" }
anyhow = "1.0.100"
ct-codecs = "1.1.6"
ed25519-compact = { version = "2.1.1", features = ["pem"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
hmac-sha256 = "1.1.12"
log = "0.4.28"
# Structured audit logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sha2 = "0.10"
regex = "1.12.2"
thiserror = "2.0.17"
# Security: zeroize sensitive data on drop
zeroize = { version = "1.8", features = ["derive"] }
# WASI HTTP support - only used on wasm32-wasip2 via cfg guards
wasi = "0.14.7"

# Keyless signing dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"  # RFC 8785 JSON Canonicalization for Rekor SET verification
base64 = "0.22"
x509-parser = "0.16"
time = "0.3"
chrono = "0.4"
hex = "0.4"
uuid = { version = "1.11", features = ["v4"] }
# ureq is only used on native (cfg-guarded), but must be unconditional for Bazel
ureq = "3.1.2"
# SPKI encoding for public keys
spki = { version = "0.7", features = ["alloc"] }
# ECDSA P-256 for keyless signing (required by Sigstore/Rekor hashedrekord)
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing"] }
# Certificate chain verification (WebPKI)
rustls-webpki = { version = "0.103", default-features = false, features = ["std"] }
rustls-pki-types = { version = "1.11", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "1.0"
pem = "3.0"
const-oid = { version = "0.9", default-features = false, features = ["db"] }
# X.509 certificate generation for provisioning
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
# Policy file parsing (TOML format)
toml = "0.8"

# Async/sync abstraction - compile-time switch
# is_sync feature enabled by default (WASM requires sync, native can override)
maybe-async = { version = "0.2", features = ["is_sync"] }

# Cross-platform secure key storage (OS keychain/keyring)
# macOS: Keychain, Linux: secret-service (GNOME Keyring), Windows: Credential Manager
[dependencies.keyring]
version = "3"
features = ["apple-native", "sync-secret-service"]
optional = true

# Async runtime and HTTP client (optional, native only)
[dependencies.tokio]
version = "1.43"
features = ["rt-multi-thread", "net", "time", "sync"]
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]
optional = true

# Rego policy language support (optional, for power users)
# Regorus is Microsoft's fast Rust implementation of OPA/Rego
[dependencies.regorus]
version = "0.2"
optional = true

# Wasmtime runtime for hosting WASM components (optional)
# Enables running WASM components that use wsc:crypto interface
[dependencies.wasmtime]
version = "29"
features = ["component-model"]
optional = true

# TPM 2.0 support via TSS2 (optional, Linux only)
# Requires tpm2-tss libraries installed on Linux
# For testing: use swtpm simulator
# NOTE: Windows TPM support requires a different implementation using TBS API
#       (tss-esapi doesn't have pre-generated bindings for Windows)
#       macOS doesn't have TPM2 - use Secure Enclave instead
[target.'cfg(target_os = "linux")'.dependencies.tss-esapi]
version = "7"
optional = true

[dev-dependencies]
# WAT (WebAssembly Text) parser for tests
wat = "1.221"

[features]
default = ["software-keys", "sync"]

# API mode: sync (default) or async (native only)
# Note: maybe-async/is_sync is enabled by default in the dependency
# The async feature would require removing is_sync and using async runtime
sync = []
async = ["tokio", "reqwest"]

# Software-based key storage (always available, for development/testing)
software-keys = []
# Cross-platform OS keyring/keychain storage (macOS Keychain, Linux secret-service, Windows Credential Manager)
keyring-storage = ["keyring"]
# Hardware security backends
tpm2 = ["tss-esapi"]  # TPM 2.0 support (Linux/Windows)
secure-element = []  # Generic secure element support (planned)
se050 = ["secure-element"]  # NXP SE050 EdgeLock (planned)
trustzone = []  # ARM TrustZone / OP-TEE support (planned)
sgx = []  # Intel SGX support (planned)
# Alternative serialization formats (planned)
cbor = []  # CBOR serialization support (planned)
# Rego policy language support via Regorus (Microsoft's Rust OPA implementation)
rego = ["regorus"]
# Wasmtime runtime for hosting WASM components with hardware crypto
runtime = ["wasmtime"]
